make screenshot return blob to save bandwidth

--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -60,7 +60,7 @@
 			<button onclick="initPlayers.player0.stop();">Stop</button>
 			<button onclick="initPlayers.player0.unmute();">Unmute</button>
 			<button onclick="initPlayers.player0.mute();;">Mute</button>
-			<button id="player0-scan-button" onclick="chaoxingCheckinQrcode(screenshot(initPlayers.player0.tag), 'player0-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
+			<button id="player0-scan-button" onclick="chaoxingCheckinQrcode(await screenshot(initPlayers.player0.tag), 'player0-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
 		</div>
 		<div id="player0-div"></div>
 		<div id="player0-scanresult-div" style="text-align: center; word-wrap: break-word; width: 400px;"></div>
@@ -101,7 +101,7 @@
 			<button onclick="cameraOn();">On</button>
 			<button onclick="cameraOff();">Off</button>
 			<button id="camera-resize-button" onclick="resizePlayers()">Resize</button>
-			<button id="camera-scan-button" onclick="chaoxingCheckinQrcode(screenshot(document.getElementById('camera-video'), 0.6), 'camera-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
+			<button id="camera-scan-button" onclick="chaoxingCheckinQrcode(await screenshot(document.getElementById('camera-video'), 0.6), 'camera-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
 		</div>
 		<div id="camera-div">
 			<video id="camera-video" width="640" height="480" autoplay></video>
@@ -632,14 +632,17 @@
 		}
 
 		/* Take video screenshot. */
-		function screenshot(video, quality = 1) {
-			let canvas = document.createElement("canvas");
-			canvas.width = video.videoWidth;
-			canvas.height = video.videoHeight;
-			canvas.getContext("2d").drawImage(video, 0, 0, canvas.width, canvas.height);
-			let img_src = canvas.toDataURL("image/jpeg", quality);
-			canvas.remove();
-			return img_src;
+		async function screenshot(video, quality = 1) {
+			return new Promise((resolve, reject) => {
+				let canvas = document.createElement("canvas");
+				canvas.width = video.videoWidth;
+				canvas.height = video.videoHeight;
+				canvas.getContext("2d").drawImage(video, 0, 0, canvas.width, canvas.height);
+				canvas.toBlob(blob => {
+					resolve(blob);
+					canvas.remove();
+				}, "image/jpeg", quality);
+			});
 		}
 
 		/* Qrcode checkin. */
