--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -648,7 +648,7 @@
 
 		/* Take video screenshot. */
 		async function screenshot(video, quality) {
-			return new Promise((resolve, reject) => {
+			return (await (new Promise((resolve, reject) => {
 				let canvas = document.createElement("canvas");
 				[canvas.width, canvas.height] = [video.videoWidth, video.videoHeight];
 				canvas.getContext("2d").drawImage(video, 0, 0, canvas.width, canvas.height);
@@ -656,7 +656,7 @@
 					resolve(blob);
 					canvas.remove();
 				}, "image/jpeg", quality);
-			});
+			})));
 		}
 
 		/* Qrcode checkin. */
