--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -207,7 +207,7 @@
 			if (!(xdcheckin_version = (await post("/xdcheckin/get/version")).text) || !Object.keys(xdcheckin_latest_release = (await post("/xdcheckin/get/releases/latest")).json() || {}).length)
 				return;
 			let footer_div = document.getElementById("footer-div");
-			footer_div.innerText = "Xdcheckin " + xdcheckin_version + "&emsp;" + footer_div.innerText;
+			footer_div.innerHTML = "Xdcheckin " + xdcheckin_version + "&emsp;" + footer_div.innerHTML;
 			let xdcheckin_version_arr = xdcheckin_version.split(".");
 			let xdcheckin_latest_release_version_arr = xdcheckin_latest_release["tag_name"].split(".");
 			for (let i = 0; i < 3; ++i) {
