--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -48,7 +48,7 @@
 		<div id="players-buttons-div" class="div-center" style="display: none;">
 			<button onclick="if (initPlayers.player0) initPlayers.player0.initPlay(); if (initPlayers.player1) initPlayers.player1.initPlay(); if (initPlayers.player2) initPlayers.player2.initPlay(); if (initPlayers.player3) initPlayers.player3.initPlay();">Play All</button>
 			<button onclick="if (initPlayers.player0) initPlayers.player0.stop(); if (initPlayers.player1) initPlayers.player1.stop(); if (initPlayers.player2) initPlayers.player2.stop(); if (initPlayers.player3) initPlayers.player3.stop(); cameraOff();">Stop All</button>
-			<button onclick="if (initPlayers.player0) initPlayers.player0.unmute(); if (initPlayers.player1) initPlayers.player1.unmute(); if (initPlayers.player2) initPlayers.player2.unmute(); if (initPlayers.player3) initPlayers.player3.unmute();">Unmute All</button>
+			<button onclick="if (initPlayers.player0) initPlayers.player0.setVolume(1); if (initPlayers.player1) initPlayers.player1.setVolume(1); if (initPlayers.player2) initPlayers.player2.setVolume(1); if (initPlayers.player3) initPlayers.player3.setVolume(1);">Unmute All</button>
 			<button onclick="if (initPlayers.player0) initPlayers.player0.mute(); if (initPlayers.player1) initPlayers.player1.mute(); if (initPlayers.player2) initPlayers.player2.mute(); if (initPlayers.player3) initPlayers.player3.mute();">Mute All</button>
 			<button onclick="resizePlayers()">Resize All</button>
 		</div>
@@ -60,7 +60,7 @@
 			&emsp;
 			<button onclick="initPlayers.player0.initPlay();">Play</button>
 			<button onclick="initPlayers.player0.stop();">Stop</button>
-			<button onclick="initPlayers.player0.unmute();">Unmute</button>
+			<button onclick="initPlayers.player0.setVolume(1);">Unmute</button>
 			<button onclick="initPlayers.player0.mute();;">Mute</button>
 			<button id="player0-scan-button" onclick="chaoxingCheckinQrcodeWrapper(initPlayers.player0.tag, 0.85, 'player0-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
 		</div>
@@ -72,7 +72,7 @@
 			&emsp;
 			<button onclick="initPlayers.player1.initPlay();">Play</button>
 			<button onclick="initPlayers.player1.stop();">Stop</button>
-			<button onclick="initPlayers.player1.unmute();">Unmute</button>
+			<button onclick="initPlayers.player1.setVolume(1);">Unmute</button>
 			<button onclick="initPlayers.player1.mute();;">Mute</button>
 		</div>
 		<div id="player1-div"></div>
@@ -82,7 +82,7 @@
 			&emsp;
 			<button onclick="initPlayers.player2.initPlay();">Play</button>
 			<button onclick="initPlayers.player2.stop();">Stop</button>
-			<button onclick="initPlayers.player2.unmute();">Unmute</button>
+			<button onclick="initPlayers.player2.setVolume(1);">Unmute</button>
 			<button onclick="initPlayers.player2.mute();">Mute</button>
 		</div>
 		<div id="player2-div"></div>
@@ -92,7 +92,7 @@
 			&emsp;
 			<button onclick="initPlayers.player3.initPlay();">Play</button>
 			<button onclick="initPlayers.player3.stop();">Stop</button>
-			<button onclick="initPlayers.player3.unmute();">Unmute</button>
+			<button onclick="initPlayers.player3.setVolume(1);">Unmute</button>
 			<button onclick="initPlayers.player3.mute();">Mute</button>
 		</div>
 		<div id="player3-div"></div>
