--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="#"/>
 	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/skins/default/aliplayer-min.css"/>
 	<script async defer src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/aliplayer-min.js" onload="resizePlayers().then(enablePlayers());"></script>
-	<script async defer src="xdcheckin/static/locations.js" onload="listifyLocations().then(() => {document.getElementById('chaoxing-locations-button').style.display = 'block';});"></script>
+	<script async defer src="xdcheckin/static/locations.js" onload="listifyLocations().then(() => {if (chaoxingLogin.success) document.getElementById('chaoxing-locations-button').style.display = 'block';});"></script>
 	<script async defer src="static/classrooms.js" onload="listifyClassrooms().then(resizePlayers()).then(enablePlayers());"></script>
 	<script async defer src="https://xdcheckin.git.pnxlr.eu.org/src/backend/static/classrooms.js" onload="listifyClassrooms();"></script>
 
@@ -519,6 +519,7 @@
 				enablePlayers();
 				document.getElementById("extract-classroom-button").style.display = "inline";
 				document.getElementById("chaoxing-login-button").style.display = "none";
+				document.getElementById('chaoxing-locations-button').style.display = 'block';
 				document.getElementById("chaoxing-input-location-button").style.display = "block";
 				document.getElementById("chaoxing-activities-button").style.display = "block";
 				document.getElementById("location-current-div").style.display = "block";
